# rich-text

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitmap.cpp  bitmap.hpp  file_read_bytes.hpp  font.cpp  font.hpp  font_cache.cpp  font_cache.hpp  font_common.hpp  font_instance.cpp  font_instance.hpp  main.cpp  rich_text.cpp  rich_text.hpp  string_hash.hpp  text_box.cpp  text_runs.hpp
fonts/: CMakeLists.txt
fonts/families/: CambriaMath.json  ComicSansMS.json  MSYaHeiUI.json  MeiryoUI.json  Nirmala.json  NirmalaUI.json  NotoNaskhArabic.json  NotoSans.json  NotoSansCJK.json  NotoSansEgyptianHieroglyphs.json  NotoSansSymbols.json  NotoSerifDevanagari.json  SegoeUI.json  SegoeUIEmoji.json  SegoeUIHistoric.json  TimesNewRoman.json  Twemoji.json
sample/: CMakeLists.txt  bitmap.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  iteration_decision.hpp  main.cpp  msdf_shader.hpp  msdf_text_atlas.cpp  msdf_text_atlas.hpp  outline_shader.hpp  text_atlas.cpp  text_atlas.hpp  text_box.cpp  text_box.hpp  tool_bar.cpp  tool_bar.hpp  tool_bar_menu.cpp  tool_bar_menu.hpp  tool_bar_menu_item.cpp  tool_bar_menu_item.hpp  ui_container.cpp  ui_container.hpp  ui_object.cpp  ui_object.hpp  visitor_base.hpp
src/: CMakeLists.txt  binary_search.hpp  bitmap.cpp  bitmap.hpp  build_layout_info_icu.cpp  build_layout_info_lx.cpp  build_layout_info_utf8.cpp  build_layout_info_utf8_2.cpp  build_layout_info_utf8_visualorder.cpp  build_paragraph_layout_icu.cpp  build_paragraph_layout_lx.cpp  build_paragraph_layout_utf8.cpp  color.hpp  common.hpp  config_vars.hpp  convert_layout_info_utf8.cpp  convert_paragraph_layout_utf8.cpp  cursor_controller.cpp  cursor_controller.hpp  cursor_position.hpp  file_mapping.cpp  file_mapping.hpp  file_read_bytes.hpp  font.cpp  font.hpp  font_cache.cpp  font_cache.hpp  font_common.hpp  font_data.cpp  font_data.hpp  font_registry.cpp  font_registry.hpp  font_registry_json.cpp  formatting.cpp  formatting.hpp  formatting_iterator.cpp  formatting_iterator.hpp  fullscreen_triangle_shader.hpp  harfbuzz_font.cpp  harfbuzz_font.hpp  (+44 more)
test/: CMakeLists.txt  bench_bidi.cpp  bench_layout.cpp  bidi_test.hpp  bidi_test_data.cpp  build_layout_info_icu.cpp  build_layout_info_lx.cpp  build_layout_info_utf8.cpp  convert_layout_info_utf8.cpp  other_layout_builders.hpp  test_bidi.cpp  test_bidi_utf8.cpp  test_layout_info.cpp  test_paragraph_layout.cpp  test_script_runs.cpp  test_sheen_bidi.cpp  u16on8bidi.cpp  u16on8bidi.hpp
